src/main/java/org/example/http/errors/InvalidHttpBodyException.java
package org.example.http.errors;

public class InvalidHttpBodyException extends InvalidHttpRequestException{
    public InvalidHttpBodyException(String errorMessage) {
        super(errorMessage);
    }
}
